--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *
 {
     text-decoration: none;
@@ -29,8 +30,8 @@
 
 .logo
 {
-    width: 5rem;
-    height: 4rem;
+    width: 4.2rem;
+    height: 3.8rem;
 }
 
 
@@ -46,6 +47,7 @@
 
 .frente ul li a
 {
+    font-family: "Montserrat", sans-serif;;
     display: block;
     padding: 0.5rem 1rem;
     color: #000000;
@@ -54,8 +56,7 @@
 
 .frente ul li a:hover 
 {
-   
-    background-color: #8c8d8d;
+    text-decoration: underline;
 }
 
 .menu-icon
@@ -71,10 +72,30 @@ main
 
 .frontprin
 {
-    background-color: #ffffff;
+    background-color: red;
     width: 100%;
     height: 100vh;
 }
+
+.frontsecu
+{
+    background-color: aqua;
+    width: 100%;
+    height: 100vh;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
