--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 
 .frente
 {
-    
-    padding: 2rem 0rem;
+    background-color: #ffff;
+    padding: 1rem 0rem;
     position: fixed;
     left: 0;
     top: 0;
@@ -67,15 +67,61 @@
 
 main
 {
-    padding-top: 7rem;
+    padding-top: 6rem;
 }
 
 .frontprin
 {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 100vh;
+    height: 25rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
+
+.containerprin
+{
+    
+}
+
+
+
+.separartitulo
+{
+    display: flex;
+    gap: 0.5rem;
+}
+
+
+
+
+
+
+
+
+
+.imagenprin 
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.imagenprin img
+{
+    width: 20rem;
+    height: 15rem;
+
+}
+
+
+
+
+
+
+
 
 .frontsecu
 {
@@ -85,37 +131,21 @@ main
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*MEDIA QUERIES*/
 
 @media (max-width:768px)
 {
 
+.frente
+{
+    margin: 0;
+    padding: 12px 0 0 0;
+}
+
 .frente ul 
 {
-    background-color: #3d3d3d;
-    opacity: 0.9;
+    background-color: #000000;
+    opacity: 0.8;
 }
 
 .frente ul li 
@@ -133,6 +163,10 @@ main
 {
     display: none;
     margin-top: 1rem;
+}
+.frente nav ul a
+{
+    color: white
 }
 
 .frente nav ul.show
