--- a/css/style.css
+++ b/css/style.css
@@ -1,191 +1,470 @@
+/* Fuente principal */
 
-*
+html
 {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  background-color: #fff;
+  list-style: none;
 }
 
 
-.frente
-{
-    background-color: #ffff;
-    padding: 1rem 0rem;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
+h1, h2 {
+  font-family: 'Alegreya', serif;
 }
 
-.container-frente
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;   
+.container {
+  max-width: 1075px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
-.logo
-{
-    width: 4.2rem;
-    height: 3.8rem;
+/* Header */
+.header {
+  background: #fff;
+  padding: 20px 0;
+  border-bottom: 1px solid #ddd;
+  position: fixed;
+  width: 100%;
 }
 
-
-.frente ul
-{
-    list-style: none;
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.frente ul li 
-{
-    display: inline-block;
+.logo {
+  height: 50px;
 }
 
-.frente ul li a
+nav
 {
-    font-family: "Montserrat", sans-serif;;
-    display: block;
-    padding: 0.5rem 1rem;
-    color: #000000;
-    transition: all 0.5s linear;
+  width: 307px;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 28px;
+  justify-content: center;
 }
 
-.frente ul li a:hover 
-{
-    text-decoration: underline;
+nav a {
+  margin-left: 7px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 450;
+  scroll-behavior: smooth;
+  
 }
 
-.menu-icon
+nav a:hover
 {
-    display: none;
+  text-decoration: underline;
 }
 
-
-main
-{
-    padding-top: 6rem;
-}
-
-.frontprin
-{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 25rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.containerprin
-{
-    
+/* front */
+.front {
+  height: 35rem;
+  padding: 60px 0 0 0;
+  display: flex;
+  text-align: center;
 }
 
 
 
-.separartitulo
+.front-content {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.front h1 {
+  margin-bottom: 20px;
+  text-align: start;
+  font-weight: 350;
+  font-size: 44px;
+}
+
+.front p
 {
-    display: flex;
-    gap: 0.5rem;
+  width: 80%;
+  min-width: 100%;
+  text-align: start;
+  line-height: 1.5rem;
+  font-size: 13px;
+}
+
+.front-logo {
+  height: 13rem;
+  min-width: 50%;
+  width: 307px;
+}
+
+.titulo
+{
+  width: 59%;
+}
+
+
+/* Catálogo */
+
+#productoss
+{
+  width: 100%;
+  height: 65px;
 }
 
 
 
-
-
-
-
-
-
-.imagenprin 
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.imagenprin img
-{
-    width: 20rem;
-    height: 15rem;
-
-}
-
-
-
-
-
-
-
+/*LO DE MATI*/
 
 .frontsecu
 {
-    background-color: aqua;
+    background-color: #F3F3F3;
     width: 100%;
-    height: 100vh;
+    height: 35rem;
+    padding: 3rem 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.frontsecu h2 
+{
+    font-weight: 450;
+    font-size: 36px;
+    line-height: 40px;
+    text-align: center;
+}
+ 
+.catalogo-box {
+  background-color: #000;
+  color: #fff;
+  padding: 0 210px;
+  font-weight: bold;
+  margin-bottom: 42px;
+  height: 71px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.catalogo-box h3 {
+  font-family: 'montserrat', sans-serif;
+  font-size: 35px;
+}
+
+.productos-imgs {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.producto {
+  width: 140px;
+  height: 140px;
+  padding: 16px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #c9c8c8;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.producto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.industria {
+  margin-top: 26px;
+  font-size: 30px;
+  color: #000;
+  font-family: 'Alegreya', serif;
+}
+
+/* Nosotros */
+
+#nosotross
+{
+  width: 100%;
+  height: 82px;
+  background-color: #F3F3F3;
 }
 
 
-/*MEDIA QUERIES*/
-
-@media (max-width:768px)
-{
-
-.frente
-{
-    margin: 0;
-    padding: 12px 0 0 0;
+.nosotros {
+  padding: 36px 0;
+  text-align: center;
+  height: 41rem;
 }
 
-.frente ul 
+.nosotros h2
 {
-    background-color: #000000;
-    opacity: 0.8;
+   font-size: 44px;
+   font-weight: 420;
+   margin: 0;
 }
 
-.frente ul li 
+.texto-nosotros {
+  max-width: 800px;
+  margin: 20px auto;
+  line-height: 1.8;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.ec-mini {
+  height: 40px;
+  margin-top: 20px;
+}
+
+/* Clientes */
+.clientes {
+  background: #f3f3f3;
+  padding: 60px 0;
+  text-align: center;
+}
+
+.logos-clientes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 30px;
+}
+
+.logos-clientes img {
+  height: 100px;
+}
+
+/* Contacto */
+.contacto {
+  padding: 60px 0;
+  text-align: center;
+  background-color: #F3F3F3;
+}
+
+.contacto-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.containercontact
 {
-    display: block;
+  height: 372px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 2px;
+}
+
+.logo-contacto {
+  height: 140px;
+  width: 206px;
+}
+
+.contacto h2 
+{
+  font-size: 45px;
+  font-weight: 200;
+  height: 22px;
+}
+
+.contacto ul {
+  list-style: none;
+  padding: 0;
+  font-size: 18px;
+  line-height: 2;
+  display: flex;
+  gap: 15px;
+  color: rgb(255, 255, 255);
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.contacto ul li
+{
+  background-color: #000;
+  padding: 8px;
+  width: 289px;
+}
+
+.contacto h3
+{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: #2b2b2b;
+  font-size: 12px;
+}
+
+/* Footer */
+.footer {
+  background: #2b2b2b;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  font-size: 14px;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
     
-}
+  /*Header*/
 
-.frente nav 
-{
+  .header-content {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+ 
+  .logos-clientes {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /*Front principal*/
+
+  
+
+  .front h1 {
+    font-size: 2rem;
+  }
+
+  .front-content
+  {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1px;
+    justify-content: center;
+  }
+
+  .titulo
+  {
     width: 100%;
+    padding: 60px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .titulo h1
+  {
+    text-align: center;
+    font-size: 42px;
+  }
+
+  .titulo p
+  {
+    text-align: center;
+    min-width: 326px;
+  }
+
+  .logoprinc
+  {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .logoprinc img
+  {
+    min-width: 150px;
+    width: 120px;
+    height: 100px;
+  }
+
+  /*Catalogo*/
+
+  .frontsecu
+  {
+    height: 32rem;
+  }
+
+  .catalogo-box 
+  {
+     padding: 0 5rem;
+  }
+  
+  /*Nosotros*/
+
+  .texto-nosotros {
+  max-width: 542px;
+  margin: 20px auto;
+  line-height: 1.8;
+  color: rgba(0, 0, 0, 0.7);
+  } 
+  .nosotros
+  {
+    height: 47rem;
+  }
+
+  /*Contactos*/
+
+  #contactoss
+  
+  {
+    width: 100%;
+    height: 82px;
+    background-color: #ffffff;
+  }
+  
+
+  .contacto-content
+  {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+  }
+
+  .containercontact
+  {
+    justify-content: center;
+    align-items: center;
+
+  }
+
 }
 
-.frente nav ul 
-{
-    display: none;
-    margin-top: 1rem;
-}
-.frente nav ul a
-{
-    color: white
-}
 
-.frente nav ul.show
+@media (max-width: 596px)
 {
-    display: block;
-}
+    .frontsecu
+    {
+      height: 36rem;
+    }
 
-.container-frente
-{
-    flex-wrap: wrap;
+    #nosotross
+    {
+      height: 123px;
+    }
+    
+    .nosotros
+    {
+      height: 59rem;
+    }
 }
+    
+@media (max-width: 382px) {
 
-.menu-icon
-{
-    display: block;
-    border-radius: 50%;
-    border: #000000 solid 1px;
-    padding: 5px 5px 1px 5px;
-    cursor: pointer;
-}
 
+  .frontsecu
+  {
+    height: 52rem;
+  }
+
+  #nosotros
+  {
+    height: 74rem;
+  }
 }
