--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav a:hover
 
 /* front */
 .front {
-  height: 35rem;
+  height: 100vh;
   padding: 60px 0 0 0;
   display: flex;
   text-align: center;
@@ -115,12 +115,6 @@ nav a:hover
 
 /* Catálogo */
 
-#productoss
-{
-  width: 100%;
-  height: 65px;
-}
-
 
 
 /*LO DE MATI*/
@@ -129,10 +123,11 @@ nav a:hover
 {
     background-color: #F3F3F3;
     width: 100%;
-    height: 35rem;
-    padding: 3rem 0rem;
+    height: 100vh;
+    
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -197,15 +192,16 @@ nav a:hover
 #nosotross
 {
   width: 100%;
-  height: 82px;
+  height: 12px;
   background-color: #F3F3F3;
 }
 
 
 .nosotros {
-  padding: 36px 0;
   text-align: center;
-  height: 41rem;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .nosotros h2
@@ -247,47 +243,51 @@ nav a:hover
 }
 
 /* Contacto */
+
+.containercontactos
+{
+  background-color: #f3f3f3;
+}
+
 .contacto {
-  padding: 60px 0;
+  
   text-align: center;
   background-color: #F3F3F3;
-}
-
-.contacto-content {
+  height: 100vh;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-evenly;
+  align-items: center;
 }
 
-.containercontact
+.containercomt
 {
-  height: 372px;
+  width: 500px;
+  height: 464px;
   display: flex;
   flex-direction: column;
-  align-items: start;
-  gap: 2px;
+  justify-content: flex-start;
+  align-items: center;
 }
 
+
 .logo-contacto {
-  height: 140px;
-  width: 206px;
+  height: 229px;
+  width: 302px;
 }
 
 .contacto h2 
 {
-  font-size: 45px;
+  font-size: 64px;
   font-weight: 200;
-  height: 22px;
+  height: 44px;
 }
 
 .contacto ul {
   list-style: none;
-  padding: 0;
   font-size: 18px;
   line-height: 2;
   display: flex;
-  gap: 15px;
+  gap: 25px;
   color: rgb(255, 255, 255);
   flex-direction: column;
   align-items: flex-start;
@@ -297,15 +297,22 @@ nav a:hover
 {
   background-color: #000;
   padding: 8px;
-  width: 289px;
+  width: 361px;
+  text-align: start;
+  height: 35px;
 }
 
-.contacto h3
+.ultimotitulo
 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   color: #2b2b2b;
-  font-size: 12px;
+  font-size: 18px;
+  background-color: #f3f3f3;
+  text-align: center;
+  margin: 0;
+  padding:  0 0 50px 0;
+  
 }
 
 /* Footer */
@@ -341,18 +348,25 @@ nav a:hover
     font-size: 2rem;
   }
 
+  .front
+  {
+    padding: 34px 0 0 0;
+    align-items: center;
+  }
+
   .front-content
   {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 1px;
+    display: flex;
+    gap: 59px;
+    padding: 0;
+    flex-direction: column;
     justify-content: center;
   }
 
   .titulo
   {
     width: 100%;
-    padding: 60px 0 0 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -375,6 +389,7 @@ nav a:hover
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-bottom: 24px;
   }
 
   .logoprinc img
@@ -420,17 +435,18 @@ nav a:hover
   }
   
 
-  .contacto-content
+  .contacto
   {
     display: grid;
     justify-content: center;
     justify-items: center;
   }
 
-  .containercontact
+  .containercont
   {
     justify-content: center;
     align-items: center;
+    text-align: center;
 
   }
 
